apps/synology-reverse-proxy/endpoint.yaml
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: &name synology-reverse-proxy
  namespace: apps
  labels:
    kubernetes.io/service-name: *name
addressType: IPv4
ports:
  - name: dsm
    port: 5000
    protocol: TCP
endpoints:
  - addresses:
      - ${NAS_ADDRESS}
    conditions:
      ready: true
