apps/synology-reverse-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology-reverse-proxy
  namespace: apps
spec:
  type: ExternalName
  externalName: ${NAS_ADDRESS}
