apps/synology-reverse-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synology-reverse-proxy
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: "${PUBLIC_IP}"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: &host nas.${BASE_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: synology-reverse-proxy
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: letsencrypt-synology-reverse-proxy
